--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -4,10 +4,14 @@
 <html>
     <head>
         <title>@title</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-      <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
+        @content
+        <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+        <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
     </body>
 </html>
