--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -2,4 +2,8 @@
 
 @main("MyToolBox") {
     <h1>login</h1>
+    <form method="post">
+        <input type="password" name="password">
+        <input type="submit">
+    </form>
 }
