--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,6 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+        @header()
         @content
         <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
         <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
