--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,8 +10,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        @header()
-        @content
+        <div id="container">
+            <div id="header">@header()</div>
+            <div id="contents">@content</div>
+            <div id="footer">@footer()</div>
+        </div>
         <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
         <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
     </body>
