--- a/app/views/header.scala.html
+++ b/app/views/header.scala.html
@@ -1,13 +1,18 @@
 @()
 
-<header>
-    <section class="hero is-primary">
-        <div class="hero-body">
-            <div class="container">
-                <h1 class="title">
-                    MyToolBox
-                </h1>
-            </div>
+<nav class="navbar has-background-primary" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+        <a class="navbar-item title is-2 has-text-white" href="/">
+            MyToolBox
+        </a>
+    </div>
+    <div class="navbar-end">
+        <div class="navbar-item">
+            <sapn class="icon is-large">
+                <a href="/">
+                <i class="fas fa-3x fa-sign-out-alt has-text-white"></i>
+                </a>
+            </sapn>
         </div>
-    </section>
-</header>
+    </div>
+</nav>
