ログアウト処理の実装

--- a/app/views/header.scala.html
+++ b/app/views/header.scala.html
@@ -9,7 +9,7 @@
     <div class="navbar-end">
         <div class="navbar-item">
             <sapn class="icon is-large">
-                <a href="/">
+                <a href="/logout">
                 <i class="fas fa-3x fa-sign-out-alt has-text-white"></i>
                 </a>
             </sapn>
