--- a/app/views/VueAppTemplate.scala.html
+++ b/app/views/VueAppTemplate.scala.html
@@ -1,8 +1,9 @@
 @(app: String, title: String)
-@val path = "vue/js/" + app + ".js"
 
 @main(title){
     <div id="app"></div>
     <script src="@routes.Assets.versioned("vue/js/chunk-vendors.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.versioned(path)" type="text/javascript"></script>
+    @defining("vue/js/" + app + ".js"){path =>
+        <script src="@routes.Assets.versioned(path)" type="text/javascript"></script>
+    }
 }
