MyTodoの雛形作成

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,5 +1,8 @@
 @()
 
 @main("MyToolBox") {
-    <a href="/mytweet">MyTweet</a>
+  <ul>
+      <li><a href="/mytweet">MyTweet</a></li>
+      <li><a href="/mytodo">MyTodo</a></li>
+  </ul>
 }
